js-i2b2/cells/CRC/QueryStatus/QueryStatus.css
.CRC_QS_view {
    position: absolute;
    background: #FFF;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border: solid 1px rgba(99, 117, 140, 0.28);
    border-top: none;
    overflow: auto;
    padding: 0.4em;
    border-radius: 0 0 3px 3px;
}




.QueryStatusComponent {
    clear: both;
    margin-bottom: 3rem;
}

.QueryStatusComponent .title {
    text-align: center;
    font-weight: bold;
}

.QueryStatusComponent .viz-dropdown-select {
    float: right;
    top: -1rem;
    position: relative;
    height: 1.5rem;
    list-style-type: none;
    cursor: pointer;
    user-select: none;
    display: flex;
    padding: .2rem 1rem .23rem .3rem;
    border: 1px solid #ccc;
    border-bottom: 0;
    border-radius: .35rem .35rem 0 0;
}

.QueryStatusComponent .viz-dropdown-select.show {
    background-color: white;
    padding-left: 0;
    padding-right: 0;
    z-index: 100;
    display: block;
    border: none;
}

/* dropdown arrow */
.QueryStatusComponent .viz-dropdown-select.show > i {
    display: none;
}
.QueryStatusComponent .viz-dropdown-select > i {
    position: absolute;
    right: .2rem;
}


/* dropdown entries' labels */
.QueryStatusComponent .viz-dropdown-select.show span.label {
    display: inline-block;
}
.QueryStatusComponent .viz-dropdown-select span.label {
    display: none;
}
/* dropdown entries' icons */
.QueryStatusComponent .viz-dropdown-select li i {
    margin-right: .3rem;
    font-size: 1rem;
    position: relative;
    top: -.04rem;
}


.QueryStatusComponent .viz-dropdown-select.show .viz-dropdown-item {
    display: block !important;
    text-align: left;
    padding: .2rem .8rem;
    background-color: white;
    border: solid #ccc;
    border-width: 0 1px;
}

.QueryStatusComponent .viz-dropdown-select.show .viz-dropdown-item:last-of-type {
    border-bottom: 1px solid #ccc;
    border-radius: 0 0 .35rem .35rem;
}
.QueryStatusComponent .viz-dropdown-select.show .viz-dropdown-item:first-of-type {
    border-top: 1px solid #ccc;
    border-radius: .35rem .35rem 0 0;
}




.QueryStatusComponent .viz-window {
    transition: height 0.25s ease-out;
    overflow-y: clip;
    height: 0px;
}


.QueryStatusComponent .component-instance-viz,
.QueryStatusComponent.frameless {
    /*border: 1px solid red;*/
}

.QueryStatusComponent .header {
    margin: 0 2rem;
}

.QueryStatusComponent .title {
    padding: .5rem;
    border-bottom: 1px solid #ccc;
}
.QueryStatusComponent .viz-dropdown-select {
    margin-top: -0.5rem;
    margin-bottom: 0;
}

